service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
spec:
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: basket-svc
spec:
  selector:
    app: basket
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      ports: 80
